--- a/contact.html
+++ b/contact.html
@@ -128,7 +128,7 @@
                             <h1 class="flaticon-email font-weight-normal text-secondary m-0 mr-3"></h1>
                             <div class="d-flex flex-column">
                                 <h4>Email Us</h4>
-                                <p class="m-0 text-white">eehomes13@gmail.com</p>
+                                <p class="m-0 text-white">eehomes13@<br>gmail.com</p>
                             </div>
                         </div>
                         <div class="d-inline-flex border border-secondary p-4">
@@ -139,10 +139,9 @@
                             </div>
                         </div>
                         <div class="d-inline-flex border border-secondary p-4">
-                            
+                            <a class="btn btn-outline-dark rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-instagram"></i></a>
                             <div class="d-flex flex-column">
                                 <h4>Follow Us</h4>
-                                <a class="btn btn-outline-dark rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-instagram"></i></a>
                                 <p class="m-0 text-white">@eehomes13</p>
                             </div>
                         </div>
