--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
                 </div>
                 <div class="col-md-6 text-center text-md-right">
                     <div class="d-inline-flex align-items-center">
-                        <a class="btn btn-outline-primary" href="about.html">Home</a>
+                        <a class="btn btn-outline-primary" href="index.html">Home</a>
                         <i class="fas fa-angle-double-right text-primary mx-2"></i>
                         <a class="btn btn-outline-primary disabled" href="about.html">About Us</a>
                     </div>
@@ -127,7 +127,7 @@
                 <div class="col-lg-7 m-0 my-lg-5 pt-5 pb-5 pb-lg-2 pl-lg-5">
                     <h6 class="text-primary font-weight-normal text-uppercase mb-3">Learn About Us</h6>
                     <h1 class="mb-4 section-title">We Are The Best Interior Designing Company In Your City</h1>
-                    <p><strong>EE Homes </strong> is a global luxirious interior design company that uses modern unique and exquisite skills to bring beauty and confidence to homes and other commercial Residence.</p>
+                    <p><strong>EE Homes </strong> is a global luxury interior design company that uses modern unique and exquisite skills to bring beauty and confidence to homes and other commercial residence.</p>
                     <div class="row py-2">
                         <div class="col-sm-6">
                             <div class="d-flex align-items-center mb-4">
@@ -150,7 +150,7 @@
                         <div class="col-sm-6">
                             <div class="d-flex align-items-center mb-4">
                                 <h1 class="flaticon-office font-weight-normal text-primary m-0 mr-3"></h1>
-                                <h5 class="text-truncate m-0">Commercial interior <br> Design</h5>
+                                <h5 class="text-truncate m-0">Commercial Interior <br> Design</h5>
                             </div>
                         </div>
                     </div>
@@ -169,20 +169,20 @@
                 <div class="mt-5 pb-5  pr-lg-5 ">
                     <h6 class="text-primary font-weight-normal text-uppercase mb-3">Why Choose Us?</h6>
                     <h1 class="mb-4 section-title"> Experienced In The Interior Design Industry</h1>
-                    <p class="mb-4">We create luxirious interior design that uses modern unique and exquisite skills to bring beauty and confidence to homes and other commercial Residence.We masterfully design and craft contemporary furnitures with blends of high quality matiterials . Thus actualising your dream space.</p>
+                    <p class="mb-4">We create luxirious interior design that uses modern unique and exquisite skills to bring beauty and confidence to homes and other commercial residence.We masterfully design and craft contemporary furnitures with blends of high quality matiterials . Thus actualising your dream space.</p>
                     <ul class="list-inline">
                         <li><h5><i class="far fa-check-square text-primary mr-3"></i> proffesional services</h5></li>
                         <li><h5><i class="far fa-check-square text-primary mr-3"></i>Best Interior Design</h5></li>
                         <li><h5><i class="far fa-check-square text-primary mr-3"></i>Customer Satisfaction</h5></li>
                     </ul>
-                    <a href="" class="btn btn-primary mt-3 py-2 px-4">View More</a>
+                    <a href="project.html" class="btn btn-primary mt-3 py-2 px-4">View More</a>
                 </div>
             </div>
             
                 <div class="col-lg-5"> 
                     <div class="overflow-hidden">
                         <div class="mr-auto ml-auto mt-5 w-100 pb-5" style="height: 400px;">
-                            <img src="img/feature (2).jpg" width="100%" height="100%"  alt="">
+                            <img src="img/feature.jpg" width="100%" height="100%"  alt="">
                         </div>
                         
                     </div>
