--- a/service.html
+++ b/service.html
@@ -115,24 +115,24 @@
                 <div class="col-lg-6 pr-lg-5">
                     <h6 class="text-primary font-weight-normal text-uppercase mb-3">Our Awesome Services</h6>
                     <h1 class="mb-4 section-title">Awesome Interior Designing Services </h1>
-                    <p>we offer proffesional design solutions. for residencial and commercial space, renovations or remodels.
+                    <p>We offer proffesional design solutions. for residencial and commercial space, renovations or remodels.
                         Combinig our quality furniture pieces with highly curated hand picked luxes Decor Accessories.  </p>
-                    <a href="service.html" class="btn btn-primary mt-3 py-2 px-4">View More</a>
+                    <a href="project.html" class="btn btn-primary mt-3 py-2 px-4">View More</a>
                 </div>
                 <div class="col-lg-6 p-0 pt-5 pt-lg-0">
                     <div class="owl-carousel service-carousel position-relative">
                         <div class="d-flex flex-column text-center bg-light mx-3 p-4">
-                            <h3 class="flaticon-bedroom display-3 font-weight-normal text-primary mb-3"></h3>
+                            <img src="img/gallery-img4.jpg" alt="">
                             <h5 class="mb-3">Bedroom Design</h5>
                             <p class="m-0">Combinig skills and highly curated  luxes Decor Accessories for your luxury.</p>
                         </div>
                         <div class="d-flex flex-column text-center bg-light mx-3 p-4">
-                            <h3 class="flaticon-kitchen display-3 font-weight-normal text-primary mb-3"></h3>
+                            <img src="img/m7.jpg" alt="">
                             <h5 class="mb-3">Kitchen Design</h5>
                             <p class="m-0">We create beautiful sensation with good Aura for your Kitchen. Enjoy Balance and Harmony</p>
                         </div>
                         <div class="d-flex flex-column text-center bg-light mx-3 p-4">
-                            <h3 class="flaticon-living-room display-3 font-weight-normal text-primary mb-3"></h3>
+                            <img src="img/carousel-1.jpg" alt="">
                             <h5 class="mb-3">Living room</h5>
                             <p class="m-0">With our design skills, we bring confidence, luxury and satisfaction to your living room. </p>
                         </div>
@@ -152,20 +152,20 @@
                 <div class="mt-5 pb-5  pr-lg-5 ">
                     <h6 class="text-primary font-weight-normal text-uppercase mb-3">Why Choose Us?</h6>
                     <h1 class="mb-4 section-title"> Experienced In The Interior Design Industry</h1>
-                    <p class="mb-4">We create luxirious interior design that uses modern unique and exquisite skills to bring beauty and confidence to homes and other commercial Residence.We masterfully design and craft contemporary furnitures with blends of high quality matiterials . Thus actualising your dream space.</p>
+                    <p class="mb-4">We create luxury interior design that uses modern unique and exquisite skills to bring beauty and confidence to homes and other commercial Residence.We masterfully design and craft contemporary furnitures with blends of high quality matiterials . Thus actualising your dream space.</p>
                     <ul class="list-inline">
                         <li><h5><i class="far fa-check-square text-primary mr-3"></i> proffesional services</h5></li>
                         <li><h5><i class="far fa-check-square text-primary mr-3"></i>Best Interior Design</h5></li>
                         <li><h5><i class="far fa-check-square text-primary mr-3"></i>Customer Satisfaction</h5></li>
                     </ul>
-                    <a href="" class="btn btn-primary mt-3 py-2 px-4">View More</a>
+                    <a href="project.html" class="btn btn-primary mt-3 py-2 px-4">View More</a>
                 </div>
             </div>
             
                 <div class="col-lg-5"> 
                     <div class="overflow-hidden">
                         <div class="mr-auto ml-auto mt-5 w-100 pb-5" style="height: 400px;">
-                            <img src="img/feature (2).jpg" width="100%" height="100%"  alt="">
+                            <img src="img/feature.jpg" width="100%" height="100%"  alt="">
                         </div>
                         
                     </div>
